--- a/kubernetes/apps/media/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/media/qbittorrent/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
                     - key: "app.kubernetes.io/name"
                       operator: In
                       values:
-                        - plex-media-server
+                        - jellyfin
                 topologyKey: "kubernetes.io/hostname"
         containers:
           app:
