--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -54,7 +54,7 @@ spec:
               limits:
                 nvidia.com/gpu: 1
                 # gpu.intel.com/i915: 1
-                memory: 9248M
+                memory: 16Gi
     service:
       main:
         controller: main
