--- a/kubernetes/apps/storage/longhorn/app/storage-classes/longhorn-sc-fast.yaml
+++ b/kubernetes/apps/storage/longhorn/app/storage-classes/longhorn-sc-fast.yaml
@@ -12,3 +12,9 @@ parameters:
   fromBackup: ""
   fsType: "ext4"
   diskSelector: "fast"
+  recurringJobSelector: '[
+    {
+      "name":"snapshot-delete",
+      "isGroup":true
+    }
+  ]'
