--- a/kubernetes/apps/storage/longhorn/app/storage-classes/longhorn-sc-storage2.yaml
+++ b/kubernetes/apps/storage/longhorn/app/storage-classes/longhorn-sc-storage2.yaml
@@ -1,7 +1,7 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: longhorn-storage
+  name: longhorn-storage2
 provisioner: driver.longhorn.io
 allowVolumeExpansion: true
 reclaimPolicy: Delete
@@ -11,4 +11,10 @@ parameters:
   staleReplicaTimeout: "2880"
   fromBackup: ""
   fsType: "ext4"
-  diskSelector: "storage"
+  diskSelector: "storage2"
+  recurringJobSelector: '[
+    {
+      "name":"snapshot-delete",
+      "isGroup":true
+    }
+  ]'
