--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -99,7 +99,7 @@ spec:
         existingClaim: media-storage
         globalMounts:
           - path: /media
-      multimedia:
-        existingClaim: multimedia
-        globalMounts:
-          - path: /multimedia
+      # multimedia:
+      #   existingClaim: multimedia
+      #   globalMounts:
+      #     - path: /multimedia
