--- a/kubernetes/apps/media/media-storage/app/pvc.yaml
+++ b/kubernetes/apps/media/media-storage/app/pvc.yaml
@@ -18,5 +18,5 @@ spec:
   accessModes: ["ReadWriteOnce"]
   resources:
     requests:
-      storage: 16Ti
+      storage: 100Gi
   storageClassName: hostpath
