--- a/kubernetes/apps/media/media-storage/app/pvc.yaml
+++ b/kubernetes/apps/media/media-storage/app/pvc.yaml
@@ -9,14 +9,14 @@ spec:
     requests:
       storage: 15Ti
   storageClassName: longhorn-storage
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: multimedia
-spec:
-  accessModes: ["ReadWriteOnce"]
-  resources:
-    requests:
-      storage: 100Gi
-  storageClassName: hostpath
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: multimedia
+# spec:
+#   accessModes: ["ReadWriteOnce"]
+#   resources:
+#     requests:
+#       storage: 100Gi
+#   storageClassName: hostpath
