--- a/kubernetes/apps/media/media-storage/app/pvc.yaml
+++ b/kubernetes/apps/media/media-storage/app/pvc.yaml
@@ -1,14 +1,14 @@
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: media-storage
-# spec:
-#   accessModes: ["ReadWriteOnce"]
-#   resources:
-#     requests:
-#       storage: 16Ti
-#   storageClassName: longhorn-storage
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: media-storage
+spec:
+  accessModes: ["ReadWriteOnce"]
+  resources:
+    requests:
+      storage: 16Ti
+  storageClassName: longhorn-storage
 # ---
 # apiVersion: v1
 # kind: PersistentVolumeClaim
