--- a/kubernetes/apps/media/qbittorrent/app/pvc.yaml
+++ b/kubernetes/apps/media/qbittorrent/app/pvc.yaml
@@ -18,5 +18,5 @@ spec:
   accessModes: ["ReadWriteOnce"]
   resources:
     requests:
-      storage: 1T
+      storage: 1Ti
   storageClassName: longhorn-fast
