--- a/kubernetes/apps/observability/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-logs/app/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
         accessModes:
           - ReadWriteOnce
         storageClassName: longhorn-storage2
-        existingClaim: ""
+        existingClaim: "victoria-logs"
         size: 40Gi
 
       ingress:
