--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -19,6 +19,7 @@ spec:
   values:
     defaultPodOptions:
       runtimeClassName: nvidia
+      hostNetwork: true
     controllers:
       main:
         type: statefulset
