--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -11,5 +11,5 @@ resources:
   - ./sonarr/ks.yaml
   - ./jellyfin/ks.yaml
   - ./recyclarr/ks.yaml
-  # - ./jellyseerr/ks.yaml
+  - ./jellyseerr/ks.yaml
   # - ./plex/ks.yaml
