--- a/kubernetes/apps/media/qbittorrent/tools/helmrelease.yaml
+++ b/kubernetes/apps/media/qbittorrent/tools/helmrelease.yaml
@@ -72,6 +72,7 @@ spec:
             args: [
               "prune",
               "--exclude-category", "manual",
+              "--include-tag", "added:7d",
               "--include-tag", "unregistered",
               "--with-data",
               # "--dry-run",
