--- a/kubernetes/apps/media/qbittorrent/tools/helmrelease.yaml
+++ b/kubernetes/apps/media/qbittorrent/tools/helmrelease.yaml
@@ -90,7 +90,7 @@ spec:
               # "--include-tag", "expired", # defined in config.yaml
               # "--exclude-tag", "activity:24h",
               "--exclude-tag", "added:24h",
-              "--include-tag", "added:7d",
+              "--exclude-tag", "added:7d",
               "--with-data",
               # "--dry-run",
               "--server", "qbittorrent.media.svc.cluster.local",
