--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -27,3 +27,4 @@ resources:
   - ./repos/harbor-webhook.yaml
   - ./repos/democratic-csi.yaml
   - ./repos/clusterplex.yaml
+  - ./repos/hajimari.yaml
