--- a/kubernetes/apps/service/whoogle/app/helmrelease.yaml
+++ b/kubernetes/apps/service/whoogle/app/helmrelease.yaml
@@ -16,7 +16,6 @@ spec:
         namespace: flux-system
   maxHistory: 2
   install:
-    createNamespace: true
     remediation:
       retries: 3
   upgrade:
@@ -46,7 +45,7 @@ spec:
               WHOOGLE_ALT_IMG: bibliogram.art
               # WHOOGLE_ALT_WIKI: wikiless.org
               WHOOGLE_CONFIG_ALTS: 1
-              WHOOGLE_CONFIG_COUNTRY: EU
+              WHOOGLE_CONFIG_COUNTRY: RU
               # WHOOGLE_CONFIG_GET_ONLY: 1
               WHOOGLE_CONFIG_THEME: system
               WHOOGLE_CONFIG_URL: https://whoogle.${SECRET_DOMAIN}/
