--- a/kubernetes/apps/service/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/service/hajimari/app/helmrelease.yaml
@@ -4,7 +4,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: hajimari
-  namespace: default
+  namespace: service
 spec:
   interval: 30m
   chart:
