--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -39,6 +39,7 @@ stringData:
     HARBOR_DB_PASSWORD: ENC[AES256_GCM,data:u+PvgvX+UmSRjmEGoYCY40zGivQI2A==,iv:b0cyi88IlBb6SqnZnSCTErrGufCnRsG7j5G7/ggLPK8=,tag:I0g7M4NRZ3QeOCT9Sml4Xg==,type:str]
     HARBOR_DB_USER: ENC[AES256_GCM,data:A8/xWOh9JBA=,iv:PTt8X98giaH5hpjfCYQllMD9fNb5X8EoXEwMfKHVrtY=,tag:3WmX7XSXz17cEub97DVTDg==,type:str]
     HARBOR_ADMIN_PASSWORD: ENC[AES256_GCM,data:aZNk+qWABVNrKA==,iv:UGzLUsbdr+uR8ZrVrbJN26YAtjAGgqd38Q1UJKG/SOY=,tag:wrNMckae4GrQJzgpfInO2w==,type:str]
+    INVIDIOUS_PG_PASSWORD: ENC[AES256_GCM,data:g+OBz0eQf0ussw==,iv:FUO1PXKRH3CR5+b6YqFku3yUwjNNNd6hcegpSWLdswg=,tag:C05p7AyXwSADDhtZ1LBp9w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -54,8 +55,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-12T21:37:21Z"
-    mac: ENC[AES256_GCM,data:T2VnAUpg5QlpCW6r0L/lOa6X1o6/Mpsji5ZpyNesm4TRuqvxlL7QmXc97n8qg3683CwnBIDEn1DIxOT37dycS6Q++DImBFz6KFMncHD1l2NYevajkf1Jgq2Tw3IzwBwJQPbKiadup3fKjGaZKAY0MMyE66lidqrGq/Pgsk/klAw=,iv:hjRd3HWMKzyRDRdvmv576HZbf9BHAo6xU+8NZwCZkBg=,tag:skRb7Dei/YRtfTZLcWYn4Q==,type:str]
+    lastmodified: "2024-07-28T21:18:48Z"
+    mac: ENC[AES256_GCM,data:6zMKLT7fbUb/0Yy1iiw+Fs3j+51jKp1EJxo8oQ+mb5Fj0nNA/o5ZS6bUPRuZ5GWCSpy9GYDDw/dzXNFDVWQxVggCsqtywmon2PqnFLe9yUSUC9+aWwmFFMcOsJwdQRLh4QE2s51+UczpaKkmMgk9/ZeLw5yKyfYb97yhklQ0+Pk=,iv:CMpuheVeOqx4BPqqBPf/qyTWmACLZVOTt9Hp9CwZeFQ=,tag:Kaq2YZ16PKc+NXNUzDRE9w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
