--- a/kubernetes/apps/service/whoogle/app/helmrelease.yaml
+++ b/kubernetes/apps/service/whoogle/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               tag: 0.8.4
             env:
               # WHOOGLE_ALT_TW: nitter.${SECRET_DOMAIN}
-              WHOOGLE_ALT_YT: invidious.${SECRET_DOMAIN}
+              WHOOGLE_ALT_YT: yt.${SECRET_DOMAIN}
               WHOOGLE_ALT_IG: imginn.com
               WHOOGLE_ALT_RD: reddit.${SECRET_DOMAIN}
               # WHOOGLE_ALT_MD: scripe.rip
