--- a/kubernetes/apps/service/whoogle/app/helmrelease.yaml
+++ b/kubernetes/apps/service/whoogle/app/helmrelease.yaml
@@ -47,9 +47,12 @@ spec:
               # WHOOGLE_ALT_WIKI: wikiless.org
               WHOOGLE_CONFIG_ALTS: 1
               WHOOGLE_CONFIG_COUNTRY: RU
+              WHOOGLE_CONFIG_LANGUAGE: RU
+              WHOOGLE_CONFIG_SEARCH_LANGUAGE: RU
               # WHOOGLE_CONFIG_GET_ONLY: 1
               WHOOGLE_CONFIG_THEME: system
               WHOOGLE_CONFIG_URL: https://whoogle.${SECRET_DOMAIN}/
+              WHOOGLE_CONFIG_ANON_VIEW: "true"
             resources:
               requests:
                 cpu: 10m
