--- a/kubernetes/apps/service/whoogle/app/helmrelease.yaml
+++ b/kubernetes/apps/service/whoogle/app/helmrelease.yaml
@@ -47,8 +47,8 @@ spec:
               # WHOOGLE_ALT_WIKI: wikiless.org
               WHOOGLE_CONFIG_ALTS: 1
               WHOOGLE_CONFIG_COUNTRY: RU
-              WHOOGLE_CONFIG_LANGUAGE: ru-ru
-              WHOOGLE_CONFIG_SEARCH_LANGUAGE: ru-ru
+              WHOOGLE_CONFIG_LANGUAGE: lang_ru
+              WHOOGLE_CONFIG_SEARCH_LANGUAGE: lang_ru
               # WHOOGLE_CONFIG_GET_ONLY: 1
               WHOOGLE_CONFIG_THEME: system
               WHOOGLE_CONFIG_URL: https://whoogle.${SECRET_DOMAIN}/
