--- a/kubernetes/apps/security/authentik/app/ingress-outpost-external.yaml
+++ b/kubernetes/apps/security/authentik/app/ingress-outpost-external.yaml
@@ -4,6 +4,7 @@ metadata:
     name: authentik-outpost-external
     annotations:
       external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
+      hajimari.io/enable: "false"
 spec:
   ingressClassName: external
   rules:
