--- a/kubernetes/apps/security/authentik/app/ingress-outpost.yaml
+++ b/kubernetes/apps/security/authentik/app/ingress-outpost.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
     name: authentik-outpost
+    annotations:
+      hajimari.io/enable: "false"
 spec:
   rules:
     - host: hass-code.${SECRET_DOMAIN}
