--- a/kubernetes/apps/storage/democratic-csi/local-hostpath/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/local-hostpath/helmrelease.yaml
@@ -77,6 +77,10 @@ spec:
           dirPermissionsGroup: 0
 
     node:
+      mount:
+        checkFilesystem:
+          ext4:
+            enabled: true
       driver:
         extraVolumeMounts:
           - name: local-storage
