--- a/kubernetes/apps/media/media-storage/app/pvc.yaml
+++ b/kubernetes/apps/media/media-storage/app/pvc.yaml
@@ -9,3 +9,14 @@ spec:
     requests:
       storage: 15800Gi
   storageClassName: longhorn-storage
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: media
+spec:
+  accessModes: ["ReadWriteOnce"]
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: media
