--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -110,13 +110,13 @@ go2rtc:
       - rtsp://admin:12332145@192.168.108.175:8554/Streaming/Channels/102
       - "ffmpeg:gates_lq#video=copy#audio=aac"
     door_hq:
-      - ffmpeg:rtsp://user:12332145@192.168.108.197:554/ch0_0#video=h264#hardware=cuda#audio=aac
-    door_lq:
-      - ffmpeg:rtsp://user:12332145@192.168.108.197:554/ch0_1#video=h264#hardware=cuda#audio=aac
-    dvor_gates_hq:
       - ffmpeg:rtsp://user:12332145@192.168.108.150:554/ch0_0#video=h264#hardware=cuda#audio=aac
-    dvor_gates_lq:
+    door_lq:
       - ffmpeg:rtsp://user:12332145@192.168.108.150:554/ch0_1#video=h264#hardware=cuda#audio=aac
+    dvor_gates_hq:
+      - ffmpeg:rtsp://user:12332145@192.168.108.210:554/ch0_0#audio=opus
+    dvor_gates_lq:
+      - ffmpeg:rtsp://user:12332145@192.168.108.210:554/ch0_1#audio=opus
     dom2_hq:
       - ffmpeg:rtsp://user:12332145@192.168.108.122:554/ch0_0#video=h264#hardware=cuda#audio=aac
     dom2_lq:
