--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -114,9 +114,9 @@ go2rtc:
     door_lq:
       - ffmpeg:rtsp://user:12332145@192.168.108.150:554/ch0_1#video=h264#hardware=cuda#audio=aac
     dvor_gates_hq:
-      - ffmpeg:rtsp://user:12332145@192.168.108.210:554/ch0_0#audio=opus
+      - ffmpeg:rtsp://admin:12332145@192.168.108.210:554/stream1#audio=opus
     dvor_gates_lq:
-      - ffmpeg:rtsp://user:12332145@192.168.108.210:554/ch0_1#audio=opus
+      - ffmpeg:rtsp://admin:12332145@192.168.108.210:554/stream2#audio=opus
     dom2_hq:
       - ffmpeg:rtsp://user:12332145@192.168.108.122:554/ch0_0#video=h264#hardware=cuda#audio=aac
     dom2_lq:
