--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -42,7 +42,7 @@ audio:
     fire_alarm:
       threshold: 0.8
 logger:
-  default: debug
+  default: warning
   logs:
     frigate.event: debug
 birdseye:
