--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -110,13 +110,9 @@ go2rtc:
       - rtsp://admin:12332145@192.168.108.175:8554/Streaming/Channels/102
       - "ffmpeg:gates_lq#video=copy#audio=aac"
     door_hq:
-      # - ffmpeg:rtsp://user:12332145@192.168.108.150:554/ch0_0#video=h264#hardware#audio=aac
-      - rtsp://admin:12332145@192.168.108.150:554/ch0_0
-      - "ffmpeg:door_hq#audio=aac"
+      - ffmpeg:rtsp://user:12332145@192.168.108.101:554/ch0_0#video=h264#hardware#audio=aac
     door_lq:
-      # - ffmpeg:rtsp://user:12332145@192.168.108.150:554/ch0_1#video=h264#hardware#audio=aac
-      - rtsp://admin:12332145@192.168.108.150:554/ch0_1
-      - "ffmpeg:door_lq#audio=aac"
+      - ffmpeg:rtsp://user:12332145@192.168.108.101:554/ch0_1#video=h264#hardware#audio=aac
     dvor_gates_hq:
       - rtsp://admin:12332145@192.168.108.210:554/stream1
       - "ffmpeg:dvor_gates_hq#audio=aac"
@@ -124,9 +120,9 @@ go2rtc:
       - rtsp://admin:12332145@192.168.108.210:554/stream2
       - "ffmpeg:dvor_gates_lq#audio=aac"
     dom2_hq:
-      - ffmpeg:rtsp://user:12332145@192.168.108.122:554/ch0_0#video=h264#hardware=cuda#audio=aac
+      - ffmpeg:rtsp://user:12332145@192.168.108.190:554/ch0_0#video=h264#hardware=cuda#audio=aac
     dom2_lq:
-      - ffmpeg:rtsp://user:12332145@192.168.108.122:554/ch0_1#video=h264#hardware=cuda#audio=aac
+      - ffmpeg:rtsp://user:12332145@192.168.108.190:554/ch0_1#video=h264#hardware=cuda#audio=aac
   webrtc:
     candidates:
       - 192.168.108.55:8555
