--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -104,11 +104,11 @@ snapshots:
 go2rtc:
   streams:
     gates_hq:
-      - rtsp://admin:12332145@192.168.108.175:8554/Streaming/Channels/101
-      - "ffmpeg:gates_hq#video=copy#audio=aac"
+      - rtsp://admin:12332145@192.168.108.104:554/stream1
+      - "ffmpeg:gates_hq#audio=aac"
     gates_lq:
-      - rtsp://admin:12332145@192.168.108.175:8554/Streaming/Channels/102
-      - "ffmpeg:gates_lq#video=copy#audio=aac"
+      - rtsp://admin:12332145@192.168.108.104:554/stream2
+      - "ffmpeg:gates_lq#audio=aac"
     door_hq:
       - ffmpeg:rtsp://user:12332145@192.168.108.101:554/ch0_0#video=h264#hardware#audio=aac
     door_lq:
@@ -123,6 +123,12 @@ go2rtc:
       - ffmpeg:rtsp://user:12332145@192.168.108.190:554/ch0_0#video=h264#hardware=cuda#audio=aac
     dom2_lq:
       - ffmpeg:rtsp://user:12332145@192.168.108.190:554/ch0_1#video=h264#hardware=cuda#audio=aac
+    street_hq:
+      - rtsp://admin:12332145@192.168.108.175:8554/Streaming/Channels/101
+      - "ffmpeg:street_hq#video=copy#audio=aac"
+    street_lq:
+      - rtsp://admin:12332145@192.168.108.175:8554/Streaming/Channels/102
+      - "ffmpeg:street_lq#video=copy#audio=aac"
   webrtc:
     candidates:
       - 192.168.108.55:8555
@@ -334,6 +340,50 @@ cameras:
       quality: 100
     birdseye:
       order: 3
+  street:
+    enabled: True
+    ffmpeg:
+      inputs:
+        - path: rtsp://localhost:8554/dom2_hq
+          input_args: preset-rtsp-restream
+          roles:
+            - record
+            - audio
+        - path: rtsp://localhost:8554/dom2_lq
+          input_args: preset-rtsp-restream
+          roles:
+            - detect
+    live:
+      stream_name: street_hq
+      quality: 1
+    webui_url: "https://192.168.108.104/"
+    motion:
+      mask: []
+    zones:
+      kacheli:
+        coordinates: 421,204,419,112,523,111,567,200
+        inertia: 10
+        objects:
+          - person
+      dom2_tropinka:
+        coordinates: 333,127,382,127,488,360,383,360
+        inertia: 10
+        objects:
+          - person
+      lavka:
+        coordinates: 81,200,282,196,282,360,34,360
+        inertia: 10
+        objects:
+          - person
+    mqtt:
+      enabled: True
+      timestamp: False
+      bounding_box: True
+      crop: True
+      height: 270
+      quality: 100
+    birdseye:
+      order: 4
 ui:
   live_mode: mse
   use_experimental: False
