--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -178,7 +178,7 @@ cameras:
       enabled: True
       timestamp: True
       bounding_box: True
-      crop: True
+      crop: False
       height: 270
       quality: 100
     birdseye:
